--- a/src/components/Meals/MealItem/MealItem.module.css
+++ b/src/components/Meals/MealItem/MealItem.module.css
@@ -1,7 +1,8 @@
 .meal {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: space-between;
+  align-items: center;
   margin: 2rem;
   padding-bottom: 1rem;
   border-bottom: 1px solid #ccc;
