Added submit order form

--- a/src/components/Meals/MealsList/MealsList.module.css
+++ b/src/components/Meals/MealsList/MealsList.module.css
@@ -10,6 +10,14 @@
   margin: 0;
   padding: 0;
 }
+.loading {
+  text-align: center;
+}
+
+.error {
+  text-align: center;
+  color: red;
+}
 
 @keyframes meals-appear {
   from {
