--- a/src/components/Meals/PromoText.module.css
+++ b/src/components/Meals/PromoText.module.css
@@ -1,5 +1,6 @@
 .promo-text {
-  max-width: 55rem;
+  text-align: center;
+  max-width: 45rem;
   width: 90%;
   margin: auto;
   margin-top: -10rem;
